--- a/styles/default.sass
+++ b/styles/default.sass
@@ -91,6 +91,7 @@ body, html
 	font-family: var(--text-font)
 	position: relative
 	scroll-behavior: smooth
+	background-color: var(--background-color-dark)
 	&.no-scroll
 		height: 100vh
 		overflow: hidden
