--- a/styles/first-paint.sass
+++ b/styles/first-paint.sass
@@ -215,9 +215,25 @@
 				object-fit: cover
 				object-position: top center
 		.swiper-navigation 
+			--swiper-navigation-size: 15px
+			--swiper-theme-color: #000000
 			position: absolute
 			width: 238px
 			height: 60px
 			bottom: 0
 			right: 0
-			background-color: #EDEDED
+			background: #EDEDED
+			z-index: 9
+			padding: 0 40px
+			.swiper-button-prev, .swiper-rtl .swiper-button-next
+				left: 40px
+				z-index: 100
+			.swiper-button-next, .swiper-rtl .swiper-button-prev
+				right: 40px
+				z-index: 100
+			.swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction
+				bottom: 50%
+				transform: translateY(50%)
+				font-size: 18px
+				line-height: 22px
+				color: #000000
