--- a/styles/default.sass
+++ b/styles/default.sass
@@ -6,6 +6,7 @@
 	--background-color-dark: #010101
 	--title-color: #ffffff
 	--text-color: #ffffff
+	--p-color: #9A9A9A
 	--text-color-invert: #000000
 	--accent-color: #E7C35D
 	--secondary-color: #A8A8A8
@@ -51,8 +52,8 @@
 	--h6-line-height: 1.5
 	--h6-font-weight: 500
 
-	--p-font-size: 18px
-	--p-line-height: 1.11
+	--p-font-size: 16px
+	--p-line-height: 1.69
 	--p-font-weight: 400
 
 	--small-font-size: 14px
@@ -73,7 +74,7 @@ p
 	font-size: var(--p-font-size)
 	font-weight: var(--p-font-weight)
 	line-height: var(--p-line-height)
-	color: var(--text-color)
+	color: var(--p-color)
 
 *
 	box-sizing: border-box
@@ -107,6 +108,15 @@ ul, ol
 	max-width: 1270px
 	margin: 0 auto
 	padding: 0 15px
+	@include xl
+		padding: 0 20px
+	
+main
+	padding: 0 20px
+	.container
+		@include xl
+			padding-left: 0
+			padding-right: 0
 
 .divider
 	display: block
@@ -121,12 +131,12 @@ ul, ol
 	align-content: center
 	justify-content: center
 	padding: 12px 35px
-	font-weight: 500
+	font-weight: 400
 	font-size: 18px
 	line-height: 1
 	color: var(--button-text-color)
 	background-color: var(--button-background-color)
-	border-radius: var(--block-radius)
+	border-radius: var(--border-radius)
 	box-shadow: none
 	border: 2px solid var(--button-border-color) 
 	appearance: none
@@ -138,20 +148,24 @@ ul, ol
 	min-height: 48px
 	text-align: center
 	text-decoration: none
-	text-transform: uppercase
-	&:hover
-		color: var(--button-text-color-hover)
-		background-color: var(--button-background-color-hover)
-		border-color: var(--button-border-color-hover)
+	text-transform: normal
+	user-select: none
+	// &:hover
+	// 	color: var(--button-text-color-hover)
+	// 	background-color: var(--button-background-color-hover)
+	// 	border-color: var(--button-border-color-hover)
+	img 
+		margin-right: 10px
 	&.centered
 		margin: 0 auto
 
-input,
+input:not([type="checkbox"]),
 textarea
 	appearance: none
 	width: 100%
 	height: 38px
 	background-color: transparent
+	border: none
 	border-bottom: 1px solid #7c7c7c
 	border-radius: 0
 	margin-bottom: 20px
@@ -165,15 +179,9 @@ textarea
 		border-color: red
 	&::placeholder 
 		color: #666666
-
-// @include sm 
-// 	\:root
-// 		--h1-font-size: 47px
-// 		--h2-font-size: 20px
-// 		--h3-font-size: 18px
-// 		--h4-font-size: 18px
-// 		--h5-font-size: 15px
-// 		--h6-font-size: 15px
-// 		--p-font-size: 12px
-// 	.mobile-hidden
-// 		display: none
+@include sm 
+	\:root
+		--h1-font-size: 24px
+		--h2-font-size: 24px
+	.mobile-hidden
+		display: none
