--- a/styles/mixins.sass
+++ b/styles/mixins.sass
@@ -1,8 +1,11 @@
 @mixin xl
-	@media screen and (max-width: 1270px)
+	@media screen and (max-width: 1169px)
 		@content
 @mixin md
 	@media screen and (max-width: 992px)
+		@content
+@mixin tablet
+	@media screen and (max-width: 880px)
 		@content
 @mixin sm
 	@media screen and (max-width: 640px)
