--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -303,3 +303,21 @@
 			margin: 15px 0 0 0
 		&:hover 
 			color: var(--accent-color)
+
+.catalog
+	padding-left: 264px
+
+.breadcrumbs 
+	padding: 54px 0 0 28px
+	&-list
+		display: flex
+		align-items: center
+		align-content: center
+		li
+			list-style-type: none
+
+.products
+	display: grid
+	gap: 50px 11px
+	grid-template-columns: repeat(4, 1fr)
+			
