brand and catalog

--- a/styles/first-paint.sass
+++ b/styles/first-paint.sass
@@ -329,6 +329,9 @@
 			&.page
 				max-height: none
 				&>li
+					border-bottom: 1px solid #303030 
+					&:last-child
+						border-bottom: none
 					a
 						background-color: #000000
 			&.open 
