--- a/styles/default.sass
+++ b/styles/default.sass
@@ -38,7 +38,7 @@
 
 	--h3-font-size: 30px
 	--h3-line-height: 1.77
-	--h3-font-weight: 700
+	--h3-font-weight: 500
 
 	--h4-font-size: 20px
 	--h4-line-height: 1.2
@@ -113,7 +113,7 @@ ul, ol
 	@include xl
 		padding: 0 20px
 	
-main
+.home-main
 	padding: 0 20px
 	.container
 		@include xl
