--- a/styles/first-paint.sass
+++ b/styles/first-paint.sass
@@ -185,7 +185,7 @@
 					text-decoration: none
 					padding: 14px 24px 16px
 					@include has-transition(background-color)
-					&:hover
+					&:hover,
 					&.active
 						background-color: #2D2C2C
 					@include tablet
