--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -46,6 +46,7 @@
 .product
 	display: flex
 	flex-direction: column
+	align-items: center
 	&.discount
 		.product-image
 			&:before
@@ -54,6 +55,8 @@
 		.product-image
 			&:before
 				background-image: url('../assets/bamboo.svg')
+	&-link
+		text-decoration: none
 	&-image
 		width: 100%
 		height: 261px
@@ -360,12 +363,16 @@
 		margin-left: -21px
 		margin-right: -21px
 	.brand
-		border: 1px solid #303030
+		display: inline-flex
 		a
 			display: inline-block
 			width: 100%
 			padding-top: 100%
 			position: relative
+			border: 1px solid #303030
+			@include has-transition(border-color)
+			&:hover 
+				border-color: var(--accent-color)
 		img
 			position: absolute
 			top: 50%
