--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -17,6 +17,8 @@
 	padding-top: 43px
 	padding-bottom: 74px
 	border-bottom: 1px solid #303030
+	&.no-border
+		border: none
 	@include xl
 		--swiper-theme-color: var(--accent-color)
 	@include tablet
@@ -118,6 +120,11 @@
 	@include tablet
 		text-align: center
 
+.button-cart
+	.icon
+			width: 20px
+			height: 23px
+			margin-right: 9px
 .text-wrapper
 	columns: 2
 	column-gap: 70px
@@ -454,3 +461,261 @@
 	width: auto 
 	.icon
 		margin-left: 15px
+.article
+	.breadcrumbs
+		padding-left: 0	
+		padding-top: 30px
+	&-settings
+		display: flex
+		flex-wrap: wrap
+		@include tablet
+			justify-content: center
+		@include sm
+			flex-direction: column
+			align-items: flex-start
+			text-align: left
+	&-warning
+		--p-color: #ffffff
+		--p-line-height: 1.11
+		margin-top: 30px
+		margin-bottom: 15px
+		padding-left: 40px
+		position: relative
+		display: inline-block
+		text-align: left
+		&:before 
+			content: ''
+			display: inline-block
+			width: 17px
+			height: 15px
+			position: absolute
+			top: 0
+			left: 8px
+			background-image: url('../assets/warning.svg')
+			background-size: contain
+		@include tablet
+			margin: 30px auto 15px
+	&-price
+		--p-font-size: 48px
+		--p-font-weight: 700
+		--p-color: var(--accent-color)
+		@include tablet
+			text-align: center
+		@include sm
+			text-align: left
+		&-for-one
+			--p-font-size: 20px
+			--p-line-height: 1
+			--p-color: #ffffff
+			margin-top: 10px	
+			@include tablet
+				text-align: center
+			@include sm
+				text-align: left
+			span
+				color: var(--accent-color)
+	&-info
+		@include tablet
+			text-align: center
+		@include sm
+			text-align: left
+	&-more
+		--p-color: #ffffff
+		margin-top: 40px
+		border-top: 1px solid #303030
+		border-bottom: 1px solid #303030
+		padding: 25px 0 50px
+		&-block
+			margin-top: 25px
+			span
+				font-weight: 600
+	&-description
+		margin-top: 25px
+	&-name
+		@include tablet
+			text-align: center
+		@include sm
+			text-align: left
+
+.article-controls
+	width: 48%
+	@include tablet
+		width: 100%
+		max-width: 640px
+		margin: 0 auto
+
+.article-top
+	display: flex
+	gap: 30px
+	padding-top: 30px
+	@include tablet
+		flex-direction: column
+	.pricing-table
+		width: 100%
+		max-width: 626px
+		margin-top: 23px
+		@include tablet
+			margin: 23px auto 0
+		@include sm
+			width: auto
+			margin: 15px -20px 0
+		&-row
+			--p-color: #ffffff
+			display: flex
+			justify-content: space-between
+			position: relative
+			@include sm
+				--p-font-size: 14px
+				font-size: 14px
+			&:first-child
+				&:before
+					content: ''
+					width: 100%
+					height: 100%
+					background-color: #373737
+					border-radius: 18px
+					position: absolute
+					top: 0
+					left: 0
+					@include sm
+						border-radius: 0
+			&:nth-child(2n+3)
+				&:before
+					content: ''
+					width: 100%
+					height: 100%
+					background-color: #171717
+					border-radius: 18px
+					position: absolute
+					top: 0
+					left: 0
+					@include sm
+						border-radius: 0
+			div
+				display: inline-flex
+				align-items: center
+				align-content: center
+				justify-content: center
+				padding: 7px 22px
+				text-align: center
+				position: relative
+				z-index: 1
+				@include sm
+					padding: 7px 7.5px
+				&:first-child
+					text-align: left
+					@include sm
+						padding-right: 7.5px
+						padding-left: 20px
+				&:last-child
+					text-align: right
+					@include sm
+						padding-right: 20px
+						padding-left: 7.5px
+				strike
+					& + p
+						--p-color: var(--accent-color)
+						margin-left: 10px
+.big-article
+	width: 100%
+	overflow: hidden
+	position: relative
+	.slide
+		padding-top: 97%
+		position: relative
+		&.swiper-slide
+			opacity: 0!important
+			&.swiper-slide-visible.swiper-slide-active
+				opacity: 1 !important
+		img
+			width: 100%
+			height: 100%
+			object-fit: contain
+			object-position: bottom center
+			position: absolute
+			top: 0
+			left: 0
+.small-article
+	width: 100%
+	overflow: hidden
+	position: relative
+	--swiper-navigation-size: 20px
+	--swiper-navigation-color: #ffffff
+	.slide
+		height: auto
+		img
+			width: 100%
+			height: 100%
+			max-height: 103px
+			object-fit: contain
+			object-position: bottom center
+.count
+	&-cart 
+		display: inline-block
+		max-width: 134px
+		height: 48px
+		border-radius: 24px
+		border: 2px solid #FFFFFF
+		display: flex
+		margin-right: 23px
+		@include sm
+			margin-right: 0
+			margin-bottom: 20px
+		input 
+			width: 34px
+			height: 48px
+			border: none
+			box-shadow: none
+			background-color: transparent
+			text-align: center
+			color: #ffffff
+			font-size: 20px
+			font-weight: 400
+			border: none
+			box-shadow: none
+			&::placeholder 
+				color: #ffffff
+		button 
+			width: 48px
+			height: 48px
+			color: #ffffff
+			padding: 0
+			text-align: center
+			display: flex
+			align-items: center
+			align-content: center
+			justify-content: center
+			cursor: pointer
+			background: transparent
+			box-shadow: none
+			appearance: none
+			border: none
+			position: relative
+			&.minus-cart
+				&:before
+					content: ''
+					width: 12px
+					height: 2px
+					background-color: currentColor
+					display: block
+			&.plus-cart 
+				&:before
+					content: ''
+					width: 12px
+					height: 2px
+					background-color: currentColor
+					display: block
+				&:after
+					content: ''
+					width: 2px
+					height: 12px
+					background-color: currentColor
+					display: block
+					position: absolute
+					left: 50%
+					top: 50%
+					transform: translate(-50%, -50%)
+			&:first-child
+				border-radius: 24px 0 0 24px
+			&:last-child
+				border-radius: 0 24px 24px 0
