--- a/styles/default.sass
+++ b/styles/default.sass
@@ -93,6 +93,7 @@ body, html
 	position: relative
 	scroll-behavior: smooth
 	background-color: var(--background-color-dark)
+	-webkit-font-smoothing: antialiased
 	&.no-scroll
 		height: 100vh
 		overflow: hidden
@@ -190,5 +191,8 @@ textarea
 	\:root
 		--h1-font-size: 24px
 		--h2-font-size: 24px
+		--h3-font-size: 22px
+		--p-font-size: 14px
+
 	.mobile-hidden
 		display: none
