add contacts and cart pages

--- a/styles/default.sass
+++ b/styles/default.sass
@@ -155,6 +155,8 @@ ul, ol
 	text-transform: normal
 	user-select: none
 	.icon 
+		width: 14px
+		height: 14px
 		color: var(--button-border-color) 
 	&:hover
 		color: var(--button-text-color-hover)
