--- a/styles/first-paint.sass
+++ b/styles/first-paint.sass
@@ -575,6 +575,7 @@
 	ul
 		display: block
 		max-height: 297px
+		overflow-x: hidden
 		overflow-y: auto
 		scroll-snap-type: y mandatory
 		scrollbar-width: thin
@@ -609,6 +610,10 @@
 			margin-left: 14px
 			margin-top: 13px
 			cursor: pointer
+			color: #595959
+			svg
+				width: 14px
+				height: 14px
 		a
 			display: flex
 			align-items: center
