--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -664,7 +664,7 @@
 			margin-bottom: 20px
 		input 
 			width: 34px
-			height: 48px
+			height: 46px
 			border: none
 			box-shadow: none
 			background-color: transparent
@@ -674,11 +674,12 @@
 			font-weight: 400
 			border: none
 			box-shadow: none
+			margin: 0
 			&::placeholder 
 				color: #ffffff
 		button 
 			width: 48px
-			height: 48px
+			height: 46px
 			color: #ffffff
 			padding: 0
 			text-align: center
@@ -794,4 +795,186 @@
 		margin-bottom: 57px
 		@include sm
 			margin-bottom: 40px
+.cart-block-wrapper
+	display: flex
+	flex-wrap: wrap
+	padding-bottom: 80px
+.cart-info
+	flex: 0 0 70%
+	padding-right: 30px
+	@include xl
+		flex: 1 1 70%
+	@include md
+		flex: 0 0 100%
+		padding-right: 0
+.cart-checkout
+	flex: 0 0 30%
+	max-width: 250px
+	margin-left: auto 
+	--p-color: #ffffff
+	--p-font-weight: 500
+	--h3-font-weight: 700
+	@include md
+		flex: 0 0 100%
+		margin-left: 0 
+		margin-right: auto 
+		margin-top: 21px
+	@include sm
+		display: flex
+		flex-direction: column
+		justify-content: center
+		text-align: center
+		margin-left: auto
+	.button
+		--button-text-color: #000000
+		--button-background-color: #E7C35D
+		--button-background-color-hover: #AC8826
+		--button-border-color-hover: #AC8826
+		width: 250px
+		margin-top: 15px 
+.cart-item
+	display: flex
+	border-bottom: 1px solid #303030
+	padding: 19px 0 13px 
+	&:last-child
+		border-bottom: none 
+		@include md
+			border-bottom: 1px solid #303030
+	figure
+		flex: 0 0 68px
+		@include tablet
+			align-self: flex-start
+		img
+			width: 100%
+			height: 100%
+			object-fit: contain
+			object-position: bottom center
+	&-info
+		display: flex
+		align-items: flex-start
+		justify-content: space-between
+		padding-left: 40px
+		flex: 1 1 calc(100% - 68px)
+		@include tablet
+			flex-direction: column
+			padding-left: 20px
+			max-width: 210px
+		.art-item-name,
+		.prices
+			padding-right: 12px
+			@include tablet
+				display: flex
+				padding-right: 0
+				margin-bottom: 20px
+				margin-right: auto 
+				text-align: center
+				flex-direction: column-reverse
+			&.one-item
+				@include md
+					display: none
+	&-name
+		--p-color: #ffffff
+		padding-right: 12px
+		@include tablet
+			padding-right: 0 
+			margin-bottom: 20px
+	.count-cart
+		border-width: 0.5px
+		max-width: 110px
+		height: 40px
+		margin-right: 12px
+		button
+			width: 40px
+			height: 40px
+		input
+			height: 40px
+		@include tablet
+			margin-right: auto
+			margin-bottom: 15px
+	.remove-list-item
+		background-color: transparent
+		box-shadow: none
+		border: none
+		cursor: pointer 
+		color: #595959
+		margin-right: 18px
+		svg
+			width: 14px
+			height: 14px
+		@include tablet
+			margin-right: 0
+			margin-left: 30px 
+.cart-header
+	display: flex
+	align-items: center
+	align-content: center
+	justify-content: space-between
+	border-bottom: 1px solid #303030
+	padding: 21px 0
+	--p-font-weight: 500
+	--p-font-size: 18px
+	--p-color: #ffffff
+	@include tablet
+		flex-direction: column
+		align-items: flex-start
+		padding-bottom: 14px
+		h3
+			width: 100%
+			margin-bottom: 15px
+	.button
+		min-height: 36px
+		padding: 7px 14px
+		border-width: 0.5px
+		font-size: 14px
+		@include tablet
+			width: 100% 
+			border: none
+			border-radius: 0
+			padding-left: 0
+			padding-right: 0
+			justify-content: flex-start
+		.icon
+			margin-right: 10px
+ymaps.ymaps-2-1-79-ground-pane
+	filter: invert(100%)
+.map
+	height: 357px
+	flex: 0 0 65%
+	@include tablet
+		flex: 0 0 100%
+	@include sm
+		flex: 1 1 auto
+		height: 268px 
+		margin: 0 -20px 
+.contacts-info
+	flex: 0 0 35%
+	padding-right: 30px 
+	--h4-font-size: 24px
+	--h4-font-weight: 500
+	--p-line-height: 1.5
+	--p-color: #ffffff
+	@include tablet
+		flex: 0 0 100%
+		margin-bottom: 50px
+	@include sm
+		--h4-font-size: 18px
+	h4:not(:first-child)
+		margin-top: 36px
+		@include sm
+		margin-top: 28px
+	p
+		margin-top: 14px
+		@include sm
+			margin-top: 8px
 
+.contacts-block-wrapper
+	display: flex
+	justify-content: space-between
+	padding-top: 40px
+	padding-bottom: 60px
+	flex-wrap: wrap
+	@include tablet
+		flex-direction: column
+		padding-top: 35px
+		padding-bottom: 0
+	
